# tfhe-rs

./: Cargo-gpu.toml  Cargo.toml
apps/drutil/: Cargo.toml
apps/drutil/src/: lib.rs
apps/tcp-client/: Cargo.toml
apps/tcp-client/src/: main.rs
apps/tcp-server/: Cargo.toml
apps/tcp-server/src/: main.rs
testapp/: Cargo.toml  rust-note.md
testapp/src/: main.rs
testapp_gpu/: Cargo.toml
testapp_gpu/src/: main.rs
tfhe/examples/fhe_strings/server_key/: trim.rs
