[package]
name = "drutil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { path = "../../tfhe", version = "0.6.0", features = [ "boolean", "shortint", "integer", "x86_64-unix" ] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }